# FastAPI

./: main.py  pyproject.toml
